<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cc.coderm</groupId>
    <artifactId>cascade-framework</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Cascade Framework</name>
    <description>A deep encapsulation framework for Redisson with multi-level cache and distributed capabilities</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Spring Boot -->
        <spring.boot.version>3.2.0</spring.boot.version>
        
        <!-- Redisson -->
        <redisson.version>3.24.3</redisson.version>
        
        <!-- Other dependencies -->
        <caffeine.version>3.1.8</caffeine.version>
        <micrometer.version>1.12.0</micrometer.version>
        <junit.version>5.10.1</junit.version>
        <kryo.version>5.4.0</kryo.version>
        <testcontainers.version>1.19.3</testcontainers.version>
    </properties>

    <modules>
        <module>cascade-core</module>
        <module>cascade-cache</module>
        <module>cascade-lock</module>
        <module>cascade-bloom</module>
        <module>cascade-limiter</module>
        <module>cascade-queue</module>
        <module>cascade-pubsub</module>
        <module>cascade-spring-boot-starter</module>
        <module>cascade-demo</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Redisson -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            
            <!-- Local Cache -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>
            
            <!-- Metrics -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-core</artifactId>
                <version>${micrometer.version}</version>
            </dependency>
            
            <!-- Kryo -->
            <dependency>
                <groupId>com.esotericsoftware</groupId>
                <artifactId>kryo</artifactId>
                <version>${kryo.version}</version>
            </dependency>
            
            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Test -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            
            <!-- Internal modules -->
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-cache</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-lock</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-bloom</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-limiter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-queue</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.coderm</groupId>
                <artifactId>cascade-pubsub</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>